// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Container renders a spinner when status is LOADING_STATUS 1`] = `
<div>
  <header
    class="header-nav-container"
  >
    <div
      class="header-nav"
    >
      <div
        class="header-nav__logo-container"
      >
        <h1
          class="brand-logo"
        >
          <a
            href="/"
          >
            netflix
            <span
              class="font--regular"
            >
              roulette
            </span>
          </a>
        </h1>
      </div>
      <div
        class="header-nav__btn-container"
      >
        <button
          class="btn btn--secondary btn--with-icon"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-plus fa-w-14 fa-xs "
            data-icon="plus"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              fill="currentColor"
            />
          </svg>
          Add Movie
        </button>
      </div>
    </div>
  </header>
  <footer
    class="text-align--center"
  >
    <section
      class="section background--grey"
    >
      <div
        class="wrapper"
      >
        <h1
          class="brand-logo"
        >
          <a
            href="/"
          >
            netflix
            <span
              class="font--regular"
            >
              roulette
            </span>
          </a>
        </h1>
      </div>
    </section>
  </footer>
  <div
    class="spinner"
  >
    <div
      class="spinner__circle"
    />
    <p>
      Loading...
    </p>
  </div>
</div>
`;

exports[`App Container renders components when status is COMPLETE_STATUS 1`] = `
<div>
  <header
    class="header-nav-container"
  >
    <div
      class="header-nav"
    >
      <div
        class="header-nav__logo-container"
      >
        <h1
          class="brand-logo"
        >
          <a
            href="/"
          >
            netflix
            <span
              class="font--regular"
            >
              roulette
            </span>
          </a>
        </h1>
      </div>
      <div
        class="header-nav__btn-container"
      >
        <button
          class="btn btn--secondary btn--with-icon"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-plus fa-w-14 fa-xs "
            data-icon="plus"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              fill="currentColor"
            />
          </svg>
          Add Movie
        </button>
      </div>
    </div>
  </header>
  <footer
    class="text-align--center"
  >
    <section
      class="section background--grey"
    >
      <div
        class="wrapper"
      >
        <h1
          class="brand-logo"
        >
          <a
            href="/"
          >
            netflix
            <span
              class="font--regular"
            >
              roulette
            </span>
          </a>
        </h1>
      </div>
    </section>
  </footer>
</div>
`;

exports[`App Container renders modal when status is COMPLETE_STATUS and modalIsOpened is true 1`] = `
<div>
  <header
    class="header-nav-container"
  >
    <div
      class="header-nav"
    >
      <div
        class="header-nav__logo-container"
      >
        <h1
          class="brand-logo"
        >
          <a
            href="/"
          >
            netflix
            <span
              class="font--regular"
            >
              roulette
            </span>
          </a>
        </h1>
      </div>
      <div
        class="header-nav__btn-container"
      >
        <button
          class="btn btn--secondary btn--with-icon"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-plus fa-w-14 fa-xs "
            data-icon="plus"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              fill="currentColor"
            />
          </svg>
          Add Movie
        </button>
      </div>
    </div>
  </header>
  <div
    class="spinner"
  >
    <div
      class="spinner__circle"
    />
    <p>
      Loading...
    </p>
  </div>
  <footer
    class="text-align--center"
  >
    <section
      class="section background--grey"
    >
      <div
        class="wrapper"
      >
        <h1
          class="brand-logo"
        >
          <a
            href="/"
          >
            netflix
            <span
              class="font--regular"
            >
              roulette
            </span>
          </a>
        </h1>
      </div>
    </section>
  </footer>
</div>
`;
